2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport.mdp, Makefile.am,
	  MonoDevelop.DesignerSupport.Projects/WorkspaceItemDescriptor.cs,
	  MonoDevelop.DesignerSupport.Projects/ComponentNodeBuilder.cs: Add
	  support for solution and workspaces.
	* MonoDevelop.DesignerSupport.Projects/SolutionItemPropertyProvider.cs,
	  MonoDevelop.DesignerSupport.Projects/SolutionItemDescriptor.cs:
	  Renamed.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport.Projects/CombineEntryDescriptor.cs: Allow
	  editing the root folder.

2008-05-21  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.DesignerSupport/ToolboxService.cs: Update the toolbox
	  when project properties change.

2008-05-21  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.DesignerSupport.Toolbox/ToolboxItemToolboxLoader.cs:
	  Detect the runtime that the assembly references and pass it on to
	  the node builder. Catch and log more errors.

2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport.addin.xml,
	  MonoDevelop.DesignerSupport/BindingService.cs,
	  MonoDevelop.DesignerSupport/CodeBehindService.cs,
	  MonoDevelop.DesignerSupport.Projects/CombineEntryDescriptor.cs,
	  MonoDevelop.DesignerSupport.Projects/CombineEntryPropertyProvider.cs,
	  MonoDevelop.DesignerSupport.Projects/ComponentNodeBuilder.cs,
	  MonoDevelop.DesignerSupport.Projects/PropertyPadTextEditorExtension.cs,
	  MonoDevelop.DesignerSupport.Projects/ProjectReferenceDescriptor.cs:
	  New project model changes.

2008-05-20  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.DesignerSupport.Toolbox/Toolbox.cs: fixed 'Bug 389065 -
	  Toolbox tooltips show while a drag taking place and do not hide'

2008-05-16  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.DesignerSupport.Toolbox/TextToolboxNode.cs,
	  MonoDevelop.DesignerSupport.Toolbox/ITextToolboxNode.cs: Change